# p40_flowbase

./: .envrc  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  flake.nix  pyproject.toml  template.env
examples/munbreaches/: pyproject.toml
examples/p40_weather/: README.md  pyproject.toml
examples/p40_weather/src/p40_weather/: __init__.py  _version.py  config.py  definitions.py
examples/p40_weather/src/p40_weather/helpers/: __init__.py  open_meteo.py
examples/p40_weather/src/p40_weather/objects/: __init__.py  weather.py
examples/p40_weather/src/p40_weather/resources/templates/documents/: weather_doc.md.jinja
examples/p40_weather/src/p40_weather/resources/templates/prompts/: weather_city_narrative_agent_db.md.jinja
examples/p40_weather/src/p40_weather/resources/templates/tables/: weather_summary_table.sql.jinja
examples/p40_weather/src/p40_weather/resources/versions/weather_versions/: cities-main.tsv
examples/p40_weather/tests/: conftest.py  test_smoke.py
examples/weather_report/: pyproject.toml
examples/weather_report/src/weather_report/: __init__.py  config.py
examples/weather_report/src/weather_report/data/: __init__.py  objects.py
examples/weather_report/src/weather_report/prompts/: __init__.py  weather_report_extraction.md.jinja  weather_report_transcription.md.jinja
examples/weather_report/src/weather_report/scripts/: __init__.py  manager.py
examples/weather_report/src/weather_report/templates/: __init__.py  weather_report.md.jinja
examples/weather_report/src/weather_report/tests/: __init__.py  conftest.py  test_weather_report.py
examples/web_archive/: pyproject.toml
examples/web_archive/src/web_archive/: __init__.py  config.py
examples/web_archive/src/web_archive/data/: __init__.py  objects.py
examples/web_archive/src/web_archive/prompts/: __init__.py  agent_cluster_extraction.md.jinja  web_archive_cluster_extraction.md.jinja
examples/web_archive/src/web_archive/scripts/: __init__.py  manager.py
examples/web_archive/src/web_archive/tests/: conftest.py  test_web_archive.py
nix/: package.nix
src/p40_flowbase/: __init__.py  providers.py  version.py
src/p40_flowbase/agents/: __init__.py  mixin.py  models.py  providers.py
src/p40_flowbase/checks/: __init__.py
src/p40_flowbase/config/: __init__.py
src/p40_flowbase/core/: __init__.py  base.py  composite.py  database.py  document.py  figure.py  formats.py  model.py  requests_mixin.py  table.py  tables.py
src/p40_flowbase/dagster/: __init__.py  decorator.py  lint.py  wiring.py
src/p40_flowbase/helpers/: __init__.py  arrow_schema.py  file_stats.py  jinja_templates.py  json_extract.py  paths.py  rate_limit.py  readme_html.py  sql_templates.py  stats.py  templates.py
src/p40_flowbase/http/: __init__.py  host_coordinator.py  mixin.py  models.py
src/p40_flowbase/llm/: __init__.py  mixin.py  models.py  providers.py
src/p40_flowbase/logging/: __init__.py
src/p40_flowbase/manager/: __init__.py  base.py  commands.py  utils.py
src/p40_flowbase/orchestration/: graphs.py
src/p40_flowbase/resources/templates/readme/: base.readme.html.jinja  table.readme.html.jinja
src/p40_flowbase/styles/: __init__.py
tests/: conftest.py  test_checks.py
tests/_fixtures/sample_pkg/resources/templates/tables/: bad_schema_widgets.sql.jinja  default_make_widgets.sql.jinja  sample_widgets.sql.jinja
tests/agents/: conftest.py  test_retry.py
tests/core/: test_logging.py  test_manual_composite.py  test_readme_html.py  test_table_from_db.py  test_tables.py
tests/dagster/: test_asset_factory.py  test_manual_asset_metadata.py
tests/helpers/: test_jinja_templates.py  test_json_extract.py  test_paths.py  test_sql_templates.py
tests/http/: conftest.py  test_host_coordinator.py  test_resume.py  test_retry.py
tests/llm/: conftest.py  test_retry.py
