[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "p40_flowbase"
dynamic = ["version"]
description = "Data pipeline framework"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Anton Tarasenko"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp~=3.13.2",
    "aiolimiter~=1.2.1",
    "aiosqlite~=0.21.0",
    "claude-agent-sdk~=0.1.39",
    "jinja2~=3.1.6",
    "joblib~=1.5.2",
    "langgraph~=1.0.9",
    "matplotlib~=3.10.5",
    "numpy~=2.3.5",
    "openai-agents~=0.9.2",
    "openpyxl~=3.1.5",
    "pandas~=2.3.3",
    "pyarrow~=22.0.0",
    "pydantic~=2.12.4",
    "pydantic-settings~=2.10.1",
    "scikit-learn~=1.7.2",
    "sqlalchemy[asyncio]~=2.0.45",
    "sqlmodel~=0.0.31",
    "tabulate~=0.9.0",
    "typer~=0.19.2",
]

[dependency-groups]
dev = [
    "black~=25.1.0",
    "build~=1.3.0",
    "coverage",
    "mypy",
    "pytest-asyncio~=1.3.0",
    "pytest-xdist~=3.8.0",
    "pytest~=8.4.2",
    "ruff~=0.14.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
p40_flowbase = ["py.typed", "prompts/*", "templates/*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = "-q -ra --strict-markers --maxfail=1"
testpaths = ["tests"]
markers = [
    "serial: marks tests that must run serially (not in parallel)",
]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true

[tool.ruff.lint]
select = [
    "B",
    "C90",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.13"
strict = true

[tool.coverage.run]
branch = true
source = ["p40_flowbase"]

[tool.coverage.report]
fail_under = 90
show_missing = true
