[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "p40_flowbase"
dynamic = ["version"]
description = "Data pipeline framework"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "Anton Tarasenko"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp~=3.13.2",
    "aiolimiter~=1.2.1",
    "aiosqlite~=0.21.0",
    "dagster~=1.13.1",
    "duckdb~=1.5.2",
    "jinja2~=3.1.6",
    "joblib~=1.5.2",
    "matplotlib~=3.10.5",
    "pyarrow~=22.0.0",
    "pydantic~=2.12.4",
    "pydantic-settings~=2.10.1",
    "scikit-learn~=1.7.2",
    "sqlalchemy[asyncio]~=2.0.45",
    "sqlmodel~=0.0.31",
]

[project.optional-dependencies]
# Agent SDKs and LangGraph evolve fast, so we do not
# want to pin them in dependencies. Downstream users
# can decide whether to pin or upgrade without waiting
# on p40_flowbase.
claude-agent-sdk = ["claude-agent-sdk>=0.1.77"]
openai-agents = ["openai-agents>=0.17.0"]
langgraph = ["langgraph>=1.1.10"]
all = ["p40_flowbase[claude-agent-sdk,langgraph,openai-agents]"]

[dependency-groups]
dev = [
    "basedpyright~=1.39.3",
    "build~=1.3.0",
    "claude-agent-sdk~=0.1.77",
    "dagster-dg-cli~=1.13.1",
    "dagster-webserver~=1.13.1",
    "langgraph~=1.1.10",
    "mypy~=1.20.2",
    "openai-agents~=0.17.0",
    "pyarrow-stubs>=20.0.0",
    "pytest-asyncio~=1.3.0",
    "pytest-xdist~=3.8.0",
    "pytest~=8.4.2",
    "ruff~=0.14.11",
    "twine~=6.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
p40_flowbase = ["py.typed", "prompts/*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
addopts = "-q -ra --strict-markers --strict-config --maxfail=1"
testpaths = ["tests"]
pythonpath = ["tests/_fixtures"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:dagster.*",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::sqlalchemy.exc.SAWarning",
]
markers = [
    "serial: marks tests that must run serially (not in parallel)",
]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "C90",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FBT",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = [
    "E501",
    "ANN401",
    "PLR0913",
    "TRY003",
    "ISC001",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "ANN", "SLF001", "ARG", "RUF012"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
exclude = ["build/", "dist/", "\\.local/"]
strict = true
warn_unreachable = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
disallow_any_unimported = true
disallow_any_decorated = true
disallow_untyped_globals = true
extra_checks = true
strict_equality = true
strict_concatenate = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
enable_error_code = [
    "redundant-expr",
    "possibly-undefined",
    "truthy-bool",
    "truthy-iterable",
    "ignore-without-code",
    "unused-awaitable",
    "unimported-reveal",
]
# explicit-override and mutable-override: handled by pyright
# (reportImplicitOverride / reportIncompatibleVariableOverride) so we don't
# pay per-line ignores in two checkers.

[[tool.mypy.overrides]]
module = ["joblib", "langgraph", "langgraph.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["no-untyped-def", "no-untyped-call", "misc", "attr-defined", "union-attr"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["build", "dist", ".local", "**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "all"
deprecateTypingAliases = true
# Stubs ARE installed (pandas-stubs, types-openpyxl, types-tabulate) and
# resolve correctly at type-resolution time; basedpyright just can't find
# them through venv-discovery in a Nix devshell layout. The genuine
# stub-less imports (joblib, langgraph.*) carry per-line ignores already.
reportMissingTypeStubs = "none"
reportImplicitOverride = "error"
reportImportCycles = "error"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "none"  # mypy and pyright disagree on what's necessary
reportMissingTypeArgument = "error"
reportPrivateUsage = "error"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInvalidStubStatement = "error"
reportInconsistentConstructor = "error"
reportMatchNotExhaustive = "error"
reportUnnecessaryComparison = "error"
reportUnnecessaryContains = "error"
reportUnnecessaryIsInstance = "error"
reportUnusedClass = "error"
reportUnusedImport = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"
reportDeprecated = "error"
reportUnusedCallResult = "none"
reportAny = "none"
reportExplicitAny = "none"
