[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_report"
version = "25.12.01"
requires-python = ">=3.13"
dependencies = [
    "p40_flowbase~=0.1.2",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.26.0",
]

[project.scripts]
weather_report_manager = "weather_report.scripts.manager:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
weather_report = ["py.typed", "prompts/*", "templates/*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
